e-commerce-manifests/db-statefulset.yml
apiVersion: v1
kind: StatefulSet
metadata:
  name: db
  namespace: e-commerce
  spec:
    serviceName: db
    replicas: 1
    selector:
        matchLabels:
            app: db
        template:
            metadata:
                labels:
                    app: db  
    spec:
    containers:
       - name: db
         image: mysql:8.0
         ports:
            - containerPort: 3306
         volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
    
    volumeClaimTemplates:
        - metadata:
            name: db-data
            spec:
                accessModes: ["ReadWriteOnce"]
                resources:
                    requests:
                        storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: e-commerce
    spec:
        selector:
            app: db
        ports:
           - port: 3306
             targetPort: 3306 
        clusterIp: None
