e-commerce-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: e-commerce-deployment
    namespace: e-commerce
spec:
    replicas: 2
    selector:
        matchLabels:
            app: e-commerce-app
    template:
        metadata:
            labels:
                app: e-commerce-app
        spec:
            containers:
                - name: e-commerce     
                  image: tyagilavit/ecommerce-app:latest
                  ports:
                    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: e-commerce-service
    namespace: e-commerce
spec:
    selector:
            app: e-commerce-app
    
    ports:
       - port: 80
         targetPort: 8080
         type: ClusterIP
